--- a/demo/index.html
+++ b/demo/index.html
@@ -2,41 +2,30 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Simon with gestures</title>
+        <title>GestureKit Demo</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
         <style>
-            #viewport {
-                height: 250px;
-                margin-bottom: 10px;
-            }
-
-            .viewport {
-                background: #f7f7f7;
+            body {
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: 0;
             }
         </style>
     </head>
     <body>
-        <div id="viewport"></div>
-        <!--section class="simon-viewport">
-            <div class="simon-type-green"></div>
-            <div class="simon-type-red"></div>
-            <div class="simon-type-yellow"></div>
-            <div class="simon-type-blue"></div>
-            <div class="simon-feedback"></div>
-        </section-->
-        <script src="js/app.js"></script>
         <script src="../dist/gesturekit.js"></script>
         <script src="../visor/visor.js"></script>
         <script>
             window.onload = function () {
                 var viewport = document.querySelector('body');
-                new Visor();
+
+                var v = new Visor();
 
                 gesturekit
-                    .on('loadgestures', function () {
-                    })
                     .on('GK_RED', function () {
                         viewport.style.backgroundColor = 'red';
                     })
@@ -54,20 +43,11 @@
                     })
                     .on('GK_PAUSE', function (eve) {
                         viewport.style.backgroundColor = 'orange';
-                    })
-                    .on('gesturemotion', function (eve) {
-                        // console.log(eve);
                     });
 
                 gesturekit.init({
-                    // 'sensor': document.querySelector('#viewport'),
-                    'uid': '5a48d9b0-fc11-47ac-bf80-36636c8428cb',
-                    'enabled': true,
-                    'threshold': 0
+                    'uid': '5a48d9b0-fc11-47ac-bf80-36636c8428cb'
                 });
-
-                // gesturekit.disable();
-
             };
         </script>
     </body>
