Create a new gesture to test two pointers.

--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,9 @@
                     .on('GK_PAUSE', function (eve) {
                         viewport.style.backgroundColor = 'orange';
                     })
+                    .on('GK_FOO', function (eve) {
+                        viewport.style.backgroundColor = 'black';
+                    })
                     .on('GK_HELP', function () {
                         help.show();
                     });
