--- a/demo/index.html
+++ b/demo/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>GestureKit Demo</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,minimal-ui">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link href="../help/help.css" rel="stylesheet">
+        <link href="../../gesturekit-helper/helper.css" rel="stylesheet">
         <style>
             body {
                 position: absolute;
@@ -13,52 +13,40 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-
                 margin: 0;
             }
         </style>
     </head>
     <body>
         <script src="../dist/gesturekit.js"></script>
-        <script src="../visor/dist/gesturekit.visor.js"></script>
-        <script src="../help/help.js"></script>
+        <script src="../../gesturekit-helper/helper.js"></script>
         <script>
 
             window.onload = function () {
-                var viewport = document.querySelector('body'),
-                    visor = new Visor(),
-                    help = new Help({
-                        'uid': '5a48d9b0-fc11-47ac-bf80-36636c8428cb'
-                    });
+                var viewport = document.querySelector('body');
 
                 gesturekit
-                    .on('GK_RED', function () {
+                    .on('GK_PLAY', function () {
                         viewport.style.backgroundColor = 'red';
                     })
-                    .on('GK_BLUE', function () {
+                    .on('GK_PAUSE', function () {
                         viewport.style.backgroundColor = 'blue';
                     })
-                    .on('GK_GREEN', function () {
+                    .on('GK_FORWARD', function () {
                         viewport.style.backgroundColor = 'green';
                     })
-                    .on('GK_YELLOW', function () {
+                    .on('GK_BACKWARD', function () {
                         viewport.style.backgroundColor = 'yellow';
                     })
-                    .on('GK_CROSS', function (eve) {
+                    .on('GK_STOP', function (eve) {
                         viewport.style.backgroundColor = 'violet';
-                    })
-                    .on('GK_PAUSE', function (eve) {
-                        viewport.style.backgroundColor = 'orange';
-                    })
-                    .on('GK_FOO', function (eve) {
-                        viewport.style.backgroundColor = 'black';
-                    })
-                    .on('GK_HELP', function () {
-                        help.show();
                     });
+
                 gesturekit.init({
-                    'uid': '5a48d9b0-fc11-47ac-bf80-36636c8428cb'
+                    'uiid': '988786d4-56dd-45d6-a558-1245954d815c'
                 });
+
+                gesturekit.helper();
             };
         </script>
     </body>
