Remove GK_ prefix.

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,16 +27,16 @@
                 var viewport = document.querySelector('body');
 
                 gesturekit
-                    .on('GK_UP', function () {
+                    .on('UP', function () {
                         viewport.style.backgroundColor = 'red';
                     })
-                    .on('GK_DOWN', function () {
+                    .on('DOWN', function () {
                         viewport.style.backgroundColor = 'blue';
                     })
-                    .on('GK_LEFT', function () {
+                    .on('LEFT', function () {
                         viewport.style.backgroundColor = 'green';
                     })
-                    .on('GK_RIGHT', function () {
+                    .on('RIGHT', function () {
                         viewport.style.backgroundColor = 'yellow';
                     });
 
