Add support to Leap Motion Controller.

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,7 @@
         </style>
     </head>
     <body>
+        <script src="http://js.leapmotion.com/leap-0.5.0.js"></script>
         <script src="../dist/gesturekit.js"></script>
         <script src="../helper/helper.js"></script>
 
